--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="./src/assets/logo.svg" alt="Logo" class="logo" />
+      <img src="./src/assets/logo.png" alt="Logo" class="logo" />
 
       <form class="form">
         <header>
@@ -32,7 +32,6 @@
 
         <label for="date" class="label">Data</label>
         <div class="input">
-          <i><img src="./src/assets/calendar.svg" alt="Calendário" /></i>
           <input type="date" id="date" name="date" required />
         </div>
 
@@ -104,7 +103,6 @@
 
         <label for="client" class="label">Cliente</label>
         <div class="input">
-          <i><img src="./src/assets/person.svg" alt="Calendário" /></i>
           <input
             type="text"
             id="client"
@@ -119,8 +117,7 @@
 
       <aside class="schedule">
         <header>
-          <h1>Agendamentos</h1>
-          <p>Visualize os agendamentos de acordo com o dia selecionado</p>
+          <h1 id="Agendamentos">Agendamentos</h1>
         </header>
 
         <section class="schedule-period">
