--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
   </head>
   <body>
     <div class="container">
-      <img src="./src/assets/logo.png" alt="Logo" class="logo" />
 
       <form class="form">
         <header>
-          <h1>Agende um atendimento</h1>
+          <h1>Clínica HealthLife</h1>
           <p>
-            Selecione data, horário e informe o nome do cliente para criar o
-            agendamento
+            Preencha os campos abaixo para agendar uma consulta
           </p>
         </header>
 
@@ -87,27 +85,15 @@
           <li data-period="afternoon" value="18:00" class="hour hour-available">
             18:00
           </li>
-          <!-- Exemplo: Noite -->
-          <li data-period="morning" class="hour-period">Noite</li>
-
-          <li data-period="night" value="19:00" class="hour hour-available">
-            19:00
-          </li>
-          <li data-period="night" value="20:00" class="hour hour-available">
-            20:00
-          </li>
-          <li data-period="night" value="21:00" class="hour hour-unavailable">
-            21:00
-          </li>
         </ul>
 
-        <label for="client" class="label">Cliente</label>
+        <label for="client" class="label">Paciente</label>
         <div class="input">
           <input
             type="text"
             id="client"
             name="client"
-            placeholder="Nome do cliente"
+            placeholder="Nome completo"
             required
           />
         </div>
@@ -150,26 +136,6 @@
             <!-- Exemplo -->
             <li>
               <strong>14:00</strong>
-              <span>Rodrigo Gonçalves</span>
-              <img
-                src="./src/assets/cancel.svg"
-                alt="Cancelar"
-                class="cancel-icon"
-              />
-            </li>
-          </ul>
-        </section>
-
-        <section class="schedule-period">
-          <header>
-            <img src="./src/assets/night.svg" alt="noite" />
-            <strong>noite</strong>
-            <span>19h-21h</span>
-          </header>
-          <ul id="period-night" class="period">
-            <!-- Exemplo -->
-            <li>
-              <strong>19:00</strong>
               <span>Rodrigo Gonçalves</span>
               <img
                 src="./src/assets/cancel.svg"
