--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="./src//styles/index.css" />
 
-    <title>Hair Day</title>
+    <title>Clínica HealthLife</title>
   </head>
   <body>
     <div class="container">
@@ -33,7 +33,7 @@
           <input type="date" id="date" name="date" required />
         </div>
 
-        <span class="label">Horários</span>
+        <span class="label">Horário</span>
         <ul id="hours" class="hours" aria-label="Horários disponíveis de manhã">
           <!-- Exemplo: Manhã -->
           <li data-period="morning" class="hour-period">Manhã</li>
@@ -103,7 +103,7 @@
 
       <aside class="schedule">
         <header>
-          <h1 id="Agendamentos">Agendamentos</h1>
+          <h1 id="Agendamentos">Agendamentos Realizados</h1>
         </header>
 
         <section class="schedule-period">
