--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" href="./src/assets/scissors.svg" />
+    <link rel="icon" href="./src/assets/estetoscopio.jpg" />
 
     <link rel="stylesheet" href="./src//styles/index.css" />
 
